--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Tienne:wght@400;700;900&display=swap');
+
 :root, [data-bs-theme=light] {
   --bs-success-bg-subtle: #d1e7dd;
   --bs-success-border-subtle: #a3cfbb;
@@ -5,11 +7,17 @@
   --bs-danger-border-subtle: #f1aeb5;
 }
 
+html {
+  font-size: 300%;
+}
 body { 
   background-image: url(newspaper-bg.jpeg);
   background-repeat: round;
   background-attachment: fixed;
   background-color: white;
+  font-family: "Tienne", "Times New Roman", "Georgia", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 a {
@@ -20,7 +28,9 @@ a {
 .bg-danger-subtle { background-color: var(--bs-danger-bg-subtle); }
 
 .container-xl {
-  font-family: "Newsreader", serif;
+  margin: 0 auto;
+  max-width: 20rem;
+  padding: 2rem 0;
   font-optical-sizing: auto;
   font-weight: normal;
   font-style: normal;
@@ -37,8 +47,9 @@ a {
   }
 }
 
-section { height: 50vh; }
-#story1 { height: 75vh; }
+section { }
+.story { margin: 2rem auto; }
+#story1 { }
 
 #story2, #story3, #story4 {
   /* Create View Timeline */
@@ -51,4 +62,9 @@ section { height: 50vh; }
 
   /* Tweak range when effect should run*/
   animation-range: entry 20% cover 40%;
+}
+
+span.war {
+  font-weight: 700;
+  
 }
