--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ section {
 	position: relative;
 }
 
-section h1 {
+.section-content {
   position: absolute;
 	top: 50%;
 	transform: translateY(-50%);
@@ -52,12 +52,6 @@ section h1 {
   from { opacity: 0.1; }
   to   { opacity: 1;   }
 }
-
-/* #story2, #story3, #story4 {
-  animation: reveal linear both;
-  animation-timeline: view(block);
-  animation-range: cover 0% contain 30%;
-} */
 
 /**
 Story Dialogs
@@ -81,20 +75,12 @@ Story Dialogs
 }
 .dialog-wrapper .content { padding: 2rem; }
 
-.dialog-wrapper header.active {
-  cursor: move;
-    .dialog-wrapper .content { padding: 2rem; > article {
-    flex: 1 200px;
-  }
-  user-select: none;
-}
-
 #dialog-story1 {
   top: 30%;
   left: 50%;
 }
 #dialog-story2 {
-  top: 10%;
+  top: 130%;
   left: 20%
 }
 
