--- a/style.css
+++ b/style.css
@@ -41,16 +41,15 @@ section {
 	font-size: calc(1rem + 3vw);
 }
 
-
 /* ----- */
-
-/* .bg-success-subtle { background-color: var(--bs-success-bg-subtle); }
-.bg-danger-subtle { background-color: var(--bs-danger-bg-subtle); } */
-
 
 @keyframes reveal {
   from { opacity: 0.1; }
   to   { opacity: 1;   }
+}
+
+.reveal {
+  animation: reveal 2s steps(44) 1s 1 normal both;
 }
 
 /**
@@ -75,6 +74,8 @@ Story Dialogs
 }
 .dialog-wrapper .content { padding: 2rem; }
 
+
+/* story dialog positions */
 #dialog-story1 {
   top: 30%;
   left: 50%;
