--- a/style.css
+++ b/style.css
@@ -34,16 +34,20 @@ html {
 /* ----- */
 
 section {
-	border-bottom: 1px solid white;
-	padding: 1rem;
-	height: 100vh;
-	scroll-snap-align: start;
-	position: relative;
+  padding: 1rem;
+  height: 100vh;
+  scroll-snap-align: start;
+  position: relative;
   display: flex;
   align-items: center;
+  align-content: stretch;
+  justify-content: space-around;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: fit-content;
 }
   .section-content {
-    text-align: center;
+    text-align: left;
     color: rgb(43, 40, 40);
     font-size: calc(1rem + 3vw);
     padding: 2rem;
@@ -104,4 +108,10 @@ a.e {
   padding: 0.2rem;
   color: var(--black);
   background-color: var(--white) !important;
+}
+
+a.m {
+  font-size: 1rem;
+  color: var(--black);
+  text-decoration: underline;
 }
