WIP without sections

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 :root, [data-bs-theme=light] {
   --green: #35A6AD;
   --red: #EF4748;
-  --white:  #F8F5ED;
+  --white: #F8F5ED;
   --black: rgb(43, 40, 40);
 }
 
@@ -23,9 +23,9 @@ body {
 }
 
 html {
-	scroll-snap-type: mandatory;
-	scroll-snap-points-y: repeat(100vh);
-	scroll-snap-type: y mandatory;
+	/* scroll-snap-type: mandatory; */
+	/* scroll-snap-points-y: repeat(100vh); */
+	/* scroll-snap-type: y mandatory; */
 }
 
 
@@ -35,7 +35,7 @@ html {
 
 section {
   padding: 1rem;
-  height: 100vh;
+  /* height: 100vh; */
   scroll-snap-align: start;
   position: relative;
   display: flex;
