placement of the dialog stories

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   background-repeat: round;
   background-attachment: fixed;
   background-color: rgb(240, 240, 240);
+  overflow-x: hidden;
 }
 
 html {
