--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ html {
 
 section {
   padding: 1rem;
-  height: 80vh;
+  /* height: 80vh; */
+  margin-bottom: 10rem;
   scroll-snap-align: start;
   position: relative;
   display: flex;
@@ -73,7 +74,22 @@ section {
   background: var(--white);
   box-shadow: 0px 0px 5px rgba(0,0,0,0.125);
   padding: 16px;
+  font-size: 1.3rem;
 }
+  /* .dialog-wrapper .expand-collapse {
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-color: var(--red);
+    color: var(--white);
+    position: absolute;
+    left: -42px;
+    top: -2px;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 1.8rem;
+    font-weight: bold;
+  } */
   .dialog-wrapper .year { font-size: 0.7rem; }
   .positive-story { border: 2px solid var(--green); }
   .negative-story { border: 2px solid var(--red); }
