--- a/style.css
+++ b/style.css
@@ -29,23 +29,32 @@ html {
 	/* scroll-snap-type: y mandatory; */
 }
 
+.containerrr {
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 
 /* ----- */
 /* Sections */
 /* ----- */
 
 section {
+  flex-shrink: 0;
+  flex-grow: 1;
+  flex-basis: auto;
   padding: 1rem;
   /* height: 80vh; */
-  margin-bottom: 10rem;
+  /* margin-bottom: 10rem; */
   scroll-snap-align: start;
-  position: relative;
-  display: flex;
-  align-items: center;
-  align-content: stretch;
-  justify-content: space-around;
-  flex-direction: column;
-  flex-wrap: wrap;
+  /* position: relative; */
+  /* display: flex; */
+  /* align-items: center; */
+  /* align-content: stretch; */
+  /* justify-content: space-around; */
+  /* flex-direction: column; */
+  /* flex-wrap: wrap; */
   width: fit-content;
 }
   section a {
@@ -56,7 +65,7 @@ section {
   .section-content {
     text-align: left;
     color: rgb(43, 40, 40);
-    font-size: calc(1rem + 3vw);
+    font-size: calc(.5rem + 3vw);
     padding: 2rem;
   }
   .section-content .text-secondary { line-height: 1.6; }
@@ -136,4 +145,10 @@ a.m {
   font-size: 1rem;
   color: var(--black);
   text-decoration: underline;
+}
+
+
+/** utility classes **/
+.invisible {
+  visibility: hidden !important;
 }
