--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 /* ----- */
 
 :root, [data-bs-theme=light] {
+  --basefontsize: calc(1rem + 3vw);
   --green: #35A6AD;
   --red: #EF4748;
   --white: #F8F5ED;
@@ -35,7 +36,6 @@ html {
 /* ----- */
 
 section {
-  font-size: calc(1rem + 3vw);
   padding: 1rem;
   /* height: 80vh; */
   margin-bottom: 10rem;
@@ -49,10 +49,12 @@ section {
   flex-wrap: wrap;
   width: fit-content;
 }
+h1 {
+  font-size: var(--basefontsize);
+}
   section a {
     text-decoration: underline;
     color: var(--black) !important;
-    font-size: 1.5rem;
   }
   .section-content {
     text-align: left;
