--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
   --basefontcolour: #222;
   --green: #35A6AD;
   --red: #EF4748;
-  --white: #F8F5ED;
+/*  --white: #F8F5ED;*/
+  --white: rgb(240, 240, 240);
   --black: rgb(43, 40, 40);
 }
 
@@ -21,7 +22,7 @@ body {
   font-family: "Eczar", "Times New Roman", "Georgia", serif;
   background-repeat: round;
   background-attachment: fixed;
-  background-color: rgb(240, 240, 240);
+  background-color: var(--white);
   overflow-x: hidden;
 }
 
