--- a/style.css
+++ b/style.css
@@ -41,7 +41,10 @@ h1 {
 }
 
 .container {
-  margin: auto;
+  margin: 0 auto;
+  --margins: calc(2 * var(--basefontsize));
+  margin-top: var(--margins);
+  margin-bottom: var(--margins);
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -61,7 +64,6 @@ section {
   flex-shrink: 0;
   flex-grow: 1;
   flex-basis: auto;
-  padding: 1rem;
   /* height: 80vh; */
   /* margin-bottom: 10rem; */
   scroll-snap-align: start;
@@ -74,10 +76,10 @@ section {
   /* flex-wrap: wrap; */
   width: fit-content;
 }
-  .section-content {
+  section > h1, 
+  section > .section-content {
     text-align: left;
     color: rgb(43, 40, 40);
-    padding: 2rem;
   }
 
 
