--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
   --basefontcolour: #222;
   --green: #35A6AD;
   --red: #EF4748;
-/*  --white: #F8F5ED;*/
-  --white: rgb(240, 240, 240);
+  --white: #F8F5ED;
+/*  --white: rgb(240, 240, 240);*/
   --black: rgb(43, 40, 40);
 }
 
@@ -115,7 +115,7 @@ section {
   }
   to   {
     opacity: 1;
-    transform: scale(1) translate(-30%, -30%);
+    transform: scale(.15) translate(-30%, -30%);
   }
 }
 .reveal { animation: reveal 0.5s 1 normal both; }
