--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ h1 {
   margin: auto;
   display: flex;
   flex-direction: column;
-  text-align: center;
+
 }
 
 /* ----- */
@@ -59,7 +59,7 @@ section {
   position: relative;
   text-align: left;
   flex-shrink: 0;
-  flex-grow: 1;
+  flex-grow: 0;
   flex-basis: auto;
   padding: 1rem; 
   scroll-snap-align: start;
@@ -107,14 +107,15 @@ section {
 @keyframes reveal {
   from {
     opacity: 0.1;
-    transform: scale(0);
+    transform: translate(0, 0);
   }
   to   {
     opacity: 1;
-    transform: scale(1) translate(-30%, -30%);
+    transform: translate(-30%, -30%);
   }
 }
 .reveal { animation: reveal 0.5s 1 normal both; }
+.zoomout { transform: scale(.15) !important; }
 
 a {
   text-decoration: underline;
@@ -146,4 +147,5 @@ a.m /* "read more" */ {  }
 /** utility classes **/
 .invisible {
   visibility: hidden !important;
+  display: none !important;
 }
