--- a/style.css
+++ b/style.css
@@ -123,23 +123,21 @@ section {
 
 @keyframes zoom {
   from {
-    transform: scale(.15) !important;
+    transform: scale(.15);
   }
   to {
-    transform: scale(1) !important;
+    transform: translate(-30%, -30%) scale(1);
   }
 }
 @keyframes breathe {
   from {
-    /* box-shadow: 5px 5px 5px rgba(131, 150, 168, 0.6), 0px 16px 32px rgba(131, 150, 168, 0.7); */
     opacity: 1;
   }
   to {
-    /* box-shadow: none; */
     opacity: 0.2;
   }
 }
-@keyframes reveal {
+/* @keyframes reveal {
   from {
     opacity: 0.1;
     transform: translate(0, 0);
@@ -149,18 +147,23 @@ section {
     transform: translate(-30%, -30%);
   }
 }
-.reveal { animation: reveal 0.5s 1 normal both; }
+.reveal { animation: reveal 0.5s 1 normal both; } */
 .zoomin {
-  animation-name: zoom;
-  animation-direction: normal;
-  animation-duration: 0.8s;
-  animation-timing-function: ease-in-out;
+  /* animation-name: zoom; */
+  /* animation-direction: normal; */
+  /* animation-duration: 0.8s; */
+  /* animation-timing-function: ease-in-out; */
+  transform: scale(1);
+  transition: all .3 ease-in;
+
 }
 .zoomout {
-  animation-name: zoom;
+  /* animation-name: zoom;
   animation-direction: reverse;
   animation-duration: 0.8s;
-  animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out; */
+  transform: scale(.1);
+  transition: all .3 ease-in;
 }
 
 a {
