Squashed commit of the following:
commit 5974b6e2ecbf114802f34924ab1e7caf424ca3a7
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 22:08:27 2024 +0530

    example video embedded on article dialog

commit 00087aa9a7f357a020220c7e162bfc486f3c9257
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 22:03:32 2024 +0530

    breath-able buttons (styling can be changed) + audio player on article dialog (but no autoplay)

commit ed4656fc845a817eb3d5151035bacd615c88f58d
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 21:59:59 2024 +0530

    section loading text bug fix

commit 8f857b0f598e851e38a82b9d7928e30923cceb07
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 20:29:02 2024 +0530

    opens associated article when clicking on the hyperlink

commit 0b41ce8e3afa97737d251e38f51316fad9520db6
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 20:17:41 2024 +0530

    minor changes

commit 87726ce451edb76763344c3e08564b49acf467b6
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 19:46:21 2024 +0530

    typewriter effect moved to a single function

commit b0b0f30685c80f44cea12e908683bf20c762241f
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 19:32:41 2024 +0530

    loaded_section flag removed

commit 5734fe71d020eb47b7041fd92628684b939989ba
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 19:29:56 2024 +0530

    removed dynamic text insertion, now reading from html and adding typewriter effect

commit 5804569b4a9398a70ec738918b86532f19296880
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Sun Jul 21 18:29:46 2024 +0530

    visibility on the parent directly.. also zooms-in to stories associated to the link (wip)

Squashed commit of the following:

commit 5974b6e2ecbf114802f34924ab1e7caf424ca3a7
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 22:08:27 2024 +0530

    example video embedded on article dialog

commit 00087aa9a7f357a020220c7e162bfc486f3c9257
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon 

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ h1 {
   margin-bottom: var(--margins);
   display: flex;
   flex-direction: column;
-  text-align: center;
+
 }
 
 /* ----- */
@@ -63,7 +63,7 @@ section {
   position: relative;
   text-align: left;
   flex-shrink: 0;
-  flex-grow: 1;
+  flex-grow: 0;
   flex-basis: auto;
   padding: 1rem; 
   scroll-snap-align: start;
@@ -93,6 +93,22 @@ section {
   padding: 1rem;
   font-size: calc(.5rem + 1vw);
 }
+  .dialog-wrapper .expand-collapse {
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-color: grey;
+    font-family: monospace;
+    color: var(--white);
+    position: absolute;
+    left: -42px;
+    top: -2px;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 1.8rem;
+    font-weight: bold;
+    cursor: pointer !important;
+  }
   .dialog-wrapper .year { font-size: 0.7rem; }
   .positive-story { border: 2px solid var(--green); }
   .negative-story { border: 2px solid var(--red); }
@@ -111,17 +127,33 @@ section {
 
 .disable-touch { touch-action: none !important; }
 
+@keyframes breathe {
+  from {
+    box-shadow: 5px 5px 5px rgba(131, 150, 168, 0.6), 0px 16px 32px rgba(131, 150, 168, 0.7);
+  }
+  to {
+    box-shadow: none;
+  }
+}
 @keyframes reveal {
   from {
     opacity: 0.1;
-    transform: scale(0);
+    transform: translate(0, 0);
   }
   to   {
     opacity: 1;
-    transform: scale(.15) translate(-30%, -30%);
+    transform: translate(-30%, -30%);
   }
 }
 .reveal { animation: reveal 0.5s 1 normal both; }
+.zoomout { transform: scale(.15) !important; }
+/* .breathe {
+  animation-name: breathe;
+  animation-duration: 0.5s;
+  animation-direction: alternate;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+} */
 
 a {
   text-decoration: underline;
@@ -131,6 +163,11 @@ a.p, a.n, a.e, a.m {
 }
 a.p, a.n, a.e {
   padding: 0 calc(.2 * var(--basefontsize));
+  animation-name: breathe;
+  animation-duration: 1.5s;
+  animation-direction: alternate;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
 }
 
 a.p /* positive */
@@ -153,4 +190,5 @@ a.m /* "read more" */ {  }
 /** utility classes **/
 .invisible {
   visibility: hidden !important;
+  display: none !important;
 }
