#wip: improve typography (#14)
* css: use --white for background-colour

* css: make margins more consistent.

* css: update background colour.

* css: make text colour consistent.

* update css.

* css: update style for .e links

* Squashed commit of the following:

commit 5974b6e2ecbf114802f34924ab1e7caf424ca3a7
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 22:08:27 2024 +0530

    example video embedded on article dialog

commit 00087aa9a7f357a020220c7e162bfc486f3c9257
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 22:03:32 2024 +0530

    breath-able buttons (styling can be changed) + audio player on article dialog (but no autoplay)

commit ed4656fc845a817eb3d5151035bacd615c88f58d
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 21:59:59 2024 +0530

    section loading text bug fix

commit 8f857b0f598e851e38a82b9d7928e30923cceb07
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 20:29:02 2024 +0530

    opens associated article when clicking on the hyperlink

commit 0b41ce8e3afa97737d251e38f51316fad9520db6
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 20:17:41 2024 +0530

    minor changes

commit 87726ce451edb76763344c3e08564b49acf467b6
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 19:46:21 2024 +0530

    typewriter effect moved to a single function

commit b0b0f30685c80f44cea12e908683bf20c762241f
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 19:32:41 2024 +0530

    loaded_section flag removed

commit 5734fe71d020eb47b7041fd92628684b939989ba
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Mon Jul 22 19:29:56 2024 +0530

    removed dynamic text insertion, now reading from html and adding typewriter effect

commit 5804569b4a9398a70ec738918b86532f19296880
Author: kaizer1v <kaizer1v@gmail.com>
Date:   Sun Jul 21 18:29:46 2024 +0530

    visibility on the parent directly.. also zooms-in to stories associated to the link (wip)

Squ

--- a/style.css
+++ b/style.css
@@ -14,14 +14,16 @@
   --green: #35A6AD;
   --red: #EF4748;
   --white: #F8F5ED;
+/*  --white: rgb(240, 240, 240);*/
   --black: rgb(43, 40, 40);
 }
 
 body {
   font-family: "Eczar", "Times New Roman", "Georgia", serif;
+  color: var(--basefontcolour);
   background-repeat: round;
   background-attachment: fixed;
-  background-color: rgb(240, 240, 240);
+  background-color: var(--white);
   overflow-x: hidden;
 }
 
@@ -35,12 +37,14 @@ h1 {
   font-optical-sizing: auto;
   font-size: var(--basefontsize);
   font-weight: 440;
-  color: var(--basefontcolour);
   line-height: calc(1.375 * var(--basefontsize));
 }
 
 .container {
-  margin: auto;
+  margin: 0 auto;
+  --margins: calc(2 * var(--basefontsize));
+  margin-top: var(--margins);
+  margin-bottom: var(--margins);
   display: flex;
   flex-direction: column;
 
@@ -65,10 +69,13 @@ section {
   scroll-snap-align: start;
   width: fit-content;
 }
-  .section-content {
+  section > h1, 
+  section > .section-content {
     text-align: left;
-    color: rgb(43, 40, 40);
-    padding: 2rem;
+  }
+
+  section > .section-content .text-contextnews {
+    opacity: .6777;
   }
 
 
@@ -175,7 +182,7 @@ a.n  /* negative */
 
 a.e /* general world news */
 {
-  background-color: var(--white);
+  background-color: #ccc;
 }
 a.m /* "read more" */ {  }
 
