--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ section {
 /* ----- */
 
 .dialog-wrapper {
-  cursor: move;
+  /* cursor: move; */
   position: absolute;
   max-width: 450px;
   width: 100%;
@@ -144,7 +144,7 @@ section {
     opacity: 0.2;
   }
 }
-/* @keyframes reveal {
+@keyframes reveal {
   from {
     opacity: 0.1;
     transform: translate(0, 0);
@@ -154,24 +154,28 @@ section {
     transform: translate(-30%, -30%);
   }
 }
-.reveal { animation: reveal 0.5s 1 normal both; } */
 .zoomin {
-  /* animation-name: zoom; */
-  /* animation-direction: normal; */
-  /* animation-duration: 0.8s; */
-  /* animation-timing-function: ease-in-out; */
+  animation-name: zoom;
+  animation-direction: normal;
+  animation-duration: 0.8s;
+  animation-timing-function: ease-in-out;
   transform: scale(1);
   transition: all .3 ease-in;
+  z-index: 999;
 
 }
 .zoomout {
-  /* animation-name: zoom;
+  animation-name: zoom;
   animation-direction: reverse;
   animation-duration: 0.8s;
-  animation-timing-function: ease-in-out; */
+  animation-timing-function: ease-in-out;
   transform: scale(.1);
   transition: all .3 ease-in;
+  z-index: 0;
 }
+  .zoomout:hover {
+    cursor: zoom-in !important;
+  }
 
 a {
   text-decoration: underline;
@@ -187,6 +191,7 @@ a.p, a.n, a.e {
   animation-direction: alternate;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
+  cursor: zoom-in;
 }
 
 a.p /* positive */
